<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutTambahList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pick_background_1"
    android:orientation="vertical"
    tools:context=".ui.TambahListActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title"
                    style="@style/Toolbar.inputData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:text="Tambah Transaksi" />
            </androidx.appcompat.widget.Toolbar>


            <TextView
                android:id="@+id/transaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="124dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/transaksi"
                android:textColor="#515151"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/nomor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/nomor"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="#515151"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/coll_nomor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/pick_background_menu">

                <EditText
                    android:id="@+id/form_nomor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="true"
                    android:fontFamily="@font/nunito_semibold"
                    android:hint="@string/nomor1"
                    android:inputType="number"
                    android:padding="2dp"
                    android:textColorHint="#6F6F6F"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/tanggal"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="#515151"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/coll_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/pick_background_menu">

                <EditText
                    android:id="@+id/form_tanggal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:drawableEnd="@drawable/ic_baseline_date_range"
                    android:background="@android:color/transparent"
                    android:onClick="showDatePicker"
                    android:hint="@string/tanggal1"
                    android:fontFamily="@font/nunito_semibold"
                    android:inputType="date"
                    android:padding="2dp"
                    android:textColorHint="#6F6F6F"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck"
                    android:importantForAutofill="no" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/costumer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="143dp"
                android:layout_marginTop="24dp"
                android:text="@string/costumer"
                android:fontFamily="@font/nunito_bold"
                android:textColor="#515151"
                android:textSize="24sp" />

            <!--    E-mail-->
            <TextView
                android:id="@+id/kode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/kode"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="#515151"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/coll_kode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/pick_background_menu">

                <EditText
                    android:id="@+id/form_kode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:fontFamily="@font/nunito_semibold"
                    android:hint="@string/kode1"
                    android:inputType="textEmailAddress"
                    android:padding="2dp"
                    android:textColorHint="#6F6F6F"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/nama"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="#515151"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/coll_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/pick_background_menu">

                <EditText
                    android:id="@+id/form_nama"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:fontFamily="@font/nunito_semibold"
                    android:hint="@string/nama1"
                    android:inputType="textPersonName"
                    android:padding="2dp"
                    android:textColorHint="#6F6F6F"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/notelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/notelp"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="#515151"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/coll_notelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/pick_background_menu">

                <EditText
                    android:id="@+id/form_notelp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:fontFamily="@font/nunito_semibold"
                    android:hint="@string/notelp1"
                    android:inputType="number"
                    android:padding="2dp"
                    android:textColorHint="#6F6F6F"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button_simpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/pick_background_button"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/buttonsimp"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>