<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginKaryawan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/lk_login_karyawan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="162dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/lk_login"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/lk_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/lk_email"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lk_login_karyawan" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lk_coll_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/pick_background_menu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lk_email">

                    <EditText
                        android:id="@+id/lk_isiform_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/nunito_semibold"
                        android:hint="@string/lk_isiform_email"
                        android:inputType="textEmailAddress"
                        android:padding="2dp"
                        android:textColorHint="#6F6F6F"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/lk_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/lk_password"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lk_coll_email" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lk_coll_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/pick_background_menu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lk_password">

                    <EditText
                        android:id="@+id/lk_isiform_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/nunito_semibold"
                        android:hint="@string/lk_isiform_password"
                        android:inputType="textPassword"
                        android:padding="2dp"
                        android:textColorHint="#6F6F6F"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/lk_regis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:text="@string/lk_regis"
                    android:textColor="#F6894C"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.904"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lk_coll_password"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/lk_button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="42dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/pick_background_menu"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/lk_button_login"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    app:backgroundTint="@color/orange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lk_coll_password"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
